Changed shop page Removed pricing from each book Replaced links to unreleased books with 'coming soon' message Added amazon and b&n links to summer book

--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -123,6 +123,10 @@ main {
     font-weight: bold;
 }
 
+.coming-soon-tag {
+    font-weight: bold;
+}
+
 .buttons {
     display: flex;
     gap: 10px;
